WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80281
[GTK] Fix several documentation issues in WebKit2 GTK+ API
https://bugs.webkit.org/show_bug.cgi?id=80281
Summary
[GTK] Fix several documentation issues in WebKit2 GTK+ API
Carlos Garcia Campos
Reported
2012-03-05 06:44:13 PST
ssia
Attachments
Patch
(6.44 KB, patch)
2012-03-05 06:53 PST
,
Carlos Garcia Campos
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2012-03-05 06:53:50 PST
Created
attachment 130120
[details]
Patch
WebKit Review Bot
Comment 2
2012-03-05 06:57:03 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3
2012-03-06 01:29:40 PST
Committed
r109881
: <
http://trac.webkit.org/changeset/109881
>
Carlos Garcia Campos
Comment 4
2012-03-07 00:32:17 PST
***
Bug 80496
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug