[GTK] Fix several documentation issues in WebKit2 GTK+ API https://bugs.webkit.org/show_bug.cgi?id=80281

Reviewed by Martin Robinson.

* UIProcess/API/gtk/WebKitFindController.cpp:
* UIProcess/API/gtk/WebKitNavigationPolicyDecision.cpp:
(webkit_navigation_policy_decision_class_init):
* UIProcess/API/gtk/WebKitPrintOperation.cpp:
* UIProcess/API/gtk/WebKitWebView.h:

Canonical link: https://commits.webkit.org/97519@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109881 268f45cc-cd09-0410-ab3c-d52691b4dbfc